--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -20,8 +20,7 @@
       class="img"
       src="https://www.allrecipes.com/thmb/3AVHp_4aIIthPJMUGshcMysuv_Y=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3655815-04e4011577a9465ab6c1559c537bb792.jpg"
     />
-    <h2 class="desc-title">Our basic and lovely pizza 
-    </h2>
+    <h2 class="desc-title">Our basic and lovely pizza</h2>
     <p class="desc-content">
       There are few things in life as great as a hot slice of pizza. Crispy
       crust, warm melty cheese, and your favorite toppings — it doesn't get much
@@ -31,6 +30,17 @@
       Detroit-style, or like to mix it up with different pizza flavors, we have
       a recipe that you and your family are sure to love. Scroll through to find
       our best pizza recipes of all time that just might take down your takeout.
+    </p>
+    <h2 class="r1">Recipe</h2>
+    <h3 id="four cheese margherita">Four Cheese Margherita Pizza</h3>
+    <p class="r1-content">
+      Stir together olive oil, garlic, and salt; toss with tomatoes, and allow
+      to stand for 15 minutes. Preheat oven to 400 degrees F (200 degrees C).
+      Brush each pizza crust with some of the tomato marinade. Sprinkle the
+      pizzas evenly with Mozzarella and Fontina cheeses. Arrange tomatoes
+      overtop, then sprinkle with shredded basil, Parmesan, and feta cheese.
+      Bake in preheated oven until the cheese is bubbly and golden brown, about
+      10 minutes.
     </p>
     <a href="recipes/pizza.html">Pizzarriba</a>
   </body>
