--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -34,6 +34,7 @@
     <h2 class="r1">Recipe</h2>
     <h3 id="four cheese margherita">Four Cheese Margherita Pizza</h3>
     <p class="r1-content">
+        <img class="r1-img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fd7b0d535005f8623ddabcd35289415d5%2F1659572371CF3BCC73-2FBD-4DCA-969B-493ACC39E704.jpeg&q=60&c=sc&orient=true&poi=auto&h=512"/>
       Stir together olive oil, garlic, and salt; toss with tomatoes, and allow
       to stand for 15 minutes. Preheat oven to 400 degrees F (200 degrees C).
       Brush each pizza crust with some of the tomato marinade. Sprinkle the
@@ -42,6 +43,27 @@
       Bake in preheated oven until the cheese is bubbly and golden brown, about
       10 minutes.
     </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>¼ cup olive oil</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>½ teaspoon sea salt</li>
+        <li>8 Roma tomatoes, sliced</li>
+        <li>2 (12 inch) pre-baked pizza crusts</li>
+        <li>8 ounces shredded Mozzarella cheese</li>
+        <li>4 ounces shredded Fontina cheese</li>
+        <li>10 fresh basil leaves, washed, dried</li>
+        <li>½ cup freshly grated Parmesan cheese</li>
+        <li>½ cup crumbled feta cheese </li>
+    </ul>
+
+    <h3>Steps to the make the most delicious pizza</h3>
+    <ol type="1">
+        <li>Stir together olive oil, garlic, and salt; toss with tomatoes, and allow to stand for 15 minutes. Preheat oven to 400 degrees F (200 degrees C).</li>
+        <li>Brush each pizza crust with some of the tomato marinade. Sprinkle the pizzas evenly with Mozzarella and Fontina cheeses. Arrange tomatoes overtop, then sprinkle with shredded basil, Parmesan, and feta cheese.</li>
+        <li>Bake in preheated oven until the cheese is bubbly and golden brown, about 10 minutes.</li>
+      </ol>  
+    
     <a href="recipes/pizza.html">Pizzarriba</a>
   </body>
 </html>
